--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Client</title>
+  <title>SG Pixels</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="./assets/css/bootstrap.css" rel="stylesheet">
+  <link href="./assets/css/lightbox.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="./assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+<script src="./assets/js/jquery.js"></script>
+<script src="./assets/js/bootstrap.min.js"></script>
+<script src="./assets/js/lightbox-plus-jquery.js"></script>
+<script src="./assets/js/jquery.shuffle.min.js"></script>
+<script src="./assets/js/modernizr.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
