--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,8 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="./assets/css/bootstrap.css" rel="stylesheet">
-  <link href="./assets/css/lightbox.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="./assets/css/lightbox.css" rel="stylesheet" type="text/css" media="all"/>
   <link href="./assets/css/style.css" rel="stylesheet">
+  <link href="./assets/css/sb-admin.css" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
 <app-root></app-root>
