--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,6 +11,8 @@
   <link href="./assets/css/style.css" rel="stylesheet">
   <link href="./assets/css/sb-admin.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <app-root></app-root>
