--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,27 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>SG Pixels</title>
-  <base href="/">
+  <base href="/" />
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="./assets/css/bootstrap.css" rel="stylesheet">
-  <link href="./assets/css/lightbox.css" rel="stylesheet" type="text/css" media="all"/>
-  <link href="./assets/css/style.css" rel="stylesheet">
-  <link href="./assets/css/sb-admin.css" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link href="./assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="./assets/css/lightbox.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="./assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="./assets/css/sb-admin.css" rel="stylesheet" type="text/css" media="all" />
+  <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.min.css" type="text/css" media="all" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" type="text/css"
+    media="all" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" media="all" />
 </head>
+
 <body>
-<app-root></app-root>
-<script src="./assets/js/jquery.js"></script>
-<script src="./assets/js/bootstrap.min.js"></script>
-<script src="./assets/js/lightbox-plus-jquery.js"></script>
-<script src="./assets/js/jquery.shuffle.min.js"></script>
-<script src="./assets/js/modernizr.js"></script>
-<script src="./assets/js/script.js"></script>
+  <app-root></app-root>
+  <script src="./assets/js/jquery.js" type="text/javascript"></script>
+  <script src="./assets/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="./assets/js/lightbox-plus-jquery.js" type="text/javascript"></script>
+  <script src="./assets/js/jquery.shuffle.min.js" type="text/javascript"></script>
+  <script src="./assets/js/modernizr.js" type="text/javascript"></script>
+  <script src="./assets/js/menu-color.js" type="text/javascript"></script>
+  <script src="./assets/js/script.js" type="text/javascript"></script>
 </body>
+
 </html>
